# musicdb

./: .dockerignore  Dockerfile  Dockerfile poetry  README.md  docker-compose.yml  pyproject.toml  tk.py  utility.py
accounts/: tests.py  urls.py
accounts/migrations/: 0001_initial.py
deploy/scripts/: docker-entry.sh
home/: tests.py
music/: admin.py  tests.py  urls.py  views.py
music/models/: __init__.py  album.py  collection.py  review.py
music/service/: artist.py  spotify.py
musicdb/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css
static/js/: base.js
templates/: _base.html  home.html
templates/account/: logout.html  signup.html
templates/music/: album_detail.html  album_list.html
templates/registration/: login.html
